practice/1/BX-5(M)K字库卡（含语音版）/DEMO/Led5kSDK/Led5kSDK/Led5kSDK.h

typedef enum:BYTE{
	BX_Any			=	0xFE,
	BX_5K1			=	0x51,
	BX_5K2			=	0x58,
	BX_5MK2			=	0x53,
	BX_5MK1			=	0x54,
	BX_5K1Q_YY      =   0x5c,
    BX_6K1          =   0x61,
    BX_6K2          =   0x62,
    BX_6K3          =   0x63,
}bx_5k_card_type;
//-------区域格式------
// area header | data |
//---------------------
typedef struct _BX_5K_AREA
{
	BYTE	AreaType ;//一个字节
	USHORT	AreaX;  //2个字节
	USHORT	AreaY;
	USHORT	AreaWidth; 
	USHORT	AreaHeight;
	BYTE	DynamicAreaLoc;
	BYTE	Lines_sizes ;
	BYTE	RunMode; 
	USHORT	Timeout ;
	BYTE	Reserved[3];
	BYTE	SingleLine; 
	BYTE	NewLine ;
	BYTE	DisplayMode; 
	BYTE	ExitMode;
	BYTE	Speed; 
	BYTE	StayTime; 
	DWORD	DataLen;   //4个字节
}bx_5k_area_header;
//固定IP通讯连接
LED5KSDK_API DWORD WINAPI CreateClient(char *led_ip,UINT led_port,bx_5k_card_type card_type,int tmout_sec,void (CALLBACK* pClose)(DWORD dwHand,int err_code)=NULL);
//TCP modbus通讯连接
LED5KSDK_API DWORD WINAPI CreateTcpModbus(char *led_ip,bx_5k_card_type card_type,void (CALLBACK* pClose)(DWORD dwHand,int err_code)=NULL);
//打开服务器
LED5KSDK_API BOOL WINAPI StartServer(UINT port,void (CALLBACK* pConnectFunc)(DWORD dwHand,unsigned char* pid),void (CALLBACK* pCloseFunc)(DWORD dwHand,unsigned char* pid,int err_code));
//启动gprs服务器
LED5KSDK_API BOOL WINAPI StartGprsServer(UINT port,void (CALLBACK* pConnectFunc)(DWORD dwHand,unsigned char* pid),void (CALLBACK* pCloseFunc)(DWORD dwHand,unsigned char* pid,int err_code));
//关闭gprs服务器                 
LED5KSDK_API void WINAPI CloseGprsServer();
//发送节目
COMMAND_API OFS_SendFileData(DWORD dwHand,BYTE overwrite,char* pFileName,USHORT DisplayType,BYTE PlayTimes,BYTE* ProgramLife,BYTE ProgramWeek,BYTE ProgramTime,BYTE* Period,BYTE AreaNum, BYTE* AreaDataList,int AreaDataListLen);
//结束写多文件
COMMAND_API OFS_EndSendMultiFiles(DWORD dwHand);
//字库
COMMAND_API OFS_SendFontData(DWORD dwHand,BYTE overwrite,char* pFileName,BYTE FontWidth,BYTE FontHeight,BYTE* LibData,int LibData_len, BYTE FontEncode,void (CALLBACK* pCloseFunc)(int total,int sendlen));
//设置客户信息
COMMAND_API OFS_SetFontInformation(DWORD dwHand,BYTE OverWrite,char* ClientMsg);
//设置屏参
COMMAND_API OFS_SendScreenData(DWORD dwHand,BYTE overwrite,char* pFileName,USHORT Address,BYTE Baudrate,USHORT ScreenWith,USHORT ScreenHeight,
	BYTE Color,BYTE	MirrorMode,BYTE	OE,BYTE	DA,BYTE	RowOrder,BYTE FreqPar,BYTE OEAngle,BYTE CommTimeout);
//固件
COMMAND_API OFS_SendFirmWareData(DWORD dwHand,BYTE overwrite,char* pFileName, BYTE* FirmWareData,int FirmWareDataLen,void (CALLBACK* pCloseFunc)(int total,int sendlen));